# MajorityQueries

./: CMakeLists.txt  LICENSE  README.md
include/: bitmap.h  bitmap.hpp  factorial.hpp  fenwicktree.h  majorities.h  majorities.hpp  wavelettree.h
src/: CMakeLists.txt  bitmap.cpp  factorial.cpp  majorities.cpp
tests/: CMakeLists.txt  experiment.cpp  test_bitmap.cpp  test_factorial.cpp  test_maj.cpp
